# Advanced_Programming_Exercises

./: .gitignore  Readme.md
Exercises_CPP/: CMakeLists.txt
Exercises_CPP/Week_11/Client/: main.cpp
Exercises_CPP/Week_11/Server/: main.cpp
Exercises_CPP/Week_1a/: Exercises1-4.cpp  Exercises5-9  Exercises5-9.cpp  MyVars.h
Exercises_CPP/Week_1a/Exercises5-9.dSYM/Contents/: Info.plist
Exercises_CPP/Week_1a/Exercises5-9.dSYM/Contents/Resources/DWARF/: Exercises5-9
Exercises_CPP/Week_1b/: Exercise4  Exercise4.cpp  Exercises1-3  Exercises1-3.cpp
Exercises_CPP/Week_1b/Exercise4.dSYM/Contents/Resources/DWARF/: Exercise4
Exercises_CPP/Week_1b/Exercises1-3.dSYM/Contents/: Info.plist
Exercises_CPP/Week_1b/Exercises1-3.dSYM/Contents/Resources/DWARF/: Exercises1-3
Exercises_CPP/Week_2/: Exercises1-5  Exercises1-5.cpp  Exercises6-8  Exercises6-8.cpp
Exercises_CPP/Week_2/Exercises1-5.dSYM/Contents/: Info.plist
Exercises_CPP/Week_2/Exercises1-5.dSYM/Contents/Resources/DWARF/: Exercises1-5
Exercises_CPP/Week_2/Exercises6-8.dSYM/Contents/: Info.plist
Exercises_CPP/Week_2/Exercises6-8.dSYM/Contents/Resources/DWARF/: Exercises6-8
Exercises_CPP/Week_3/: Soldier.cpp  main.cpp
Exercises_CPP/Week_3/Exercises/: CMakeLists.txt  Person.cpp  Person.h  Soldier.h  Weapon.cpp  Weapon.h
Exercises_CPP/Week_4/: GameObject.cpp  GameObject.h  HealthKit.cpp  HealthKit.h  Location.cpp  Location.h  main.cpp
Exercises_CPP/Week_4/Exercises1-2/: GameObject.h  main.cpp
Exercises_CPP/Week_5/: Boat.h  Car.h  Vehicle.h  VehicleManager.cpp  VehicleManager.h  main.cpp
Exercises_CPP/Week_5/Exercises1-2/: Boat.h  Car.cpp  Car.h  Vehicle.h  main.cpp
Exercises_CPP/Week_5/Exercises3-4/: Vehicle.h  main.cpp
Exercises_CPP/Week_6_Revision/: Elementalist.h  Magic.h  Potion.h  Spell.h  Spellswords.h  Transformation.h  Wizard.h  main.cpp
Exercises_CPP/Week_7/: GameObject.h  main.cpp
Exercises_CPP/Week_8/: JammedException.cpp  JammedException.h  MagazineFullException.cpp  MagazineFullException.h  NoAmmoException.cpp  NoAmmoException.h  Weapon.h  main.cpp
Exercises_CPP/Week_9/Part_1/: main.cpp
Exercises_CPP/Week_9/Part_2/: main.cpp
Exercises_CPP/Week_9/Part_3/: Ocean.cpp  Ocean.h  main.cpp
Exercises_py/: Exercises1.py
